cr individual commponent

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,39 +1,14 @@
-.sidenav {
-    height: 100%;
-    width: 250px;
-    position: fixed;
-    z-index: 1;
-    top: 55px;
-    left: 0;
-    background-color: #111;
-    overflow-x: hidden;
-    padding-top: 6px;
-    transition: 0.3s; 
-}
-
-.sidenav a {
-    padding: 8px 8 px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    transition: 0.3s; 
-} 
-
-.sidenav a:hover, .offcanvas a:focus {
-    color: #f1f1f1;    
-}
-
 #main {
     margin-left: 250px;
     transition: .3s;
+    
 }
 
 #main-body {
     transition: .3s;
 }
 
-#main-content {
+.main-content-panel {
     padding: 20px;
 }
 
