--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,35 +1,44 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand">&nbsp;</a>
-  <ul class="navbar-nav mr-auto">
-    <li class="nav-item nav-link active">Home</li>
-    <li class="nav-item nav-link">Products</li>
-    <li class="nav-item nav-link">About Us</li>
-  </ul>
-</nav>
+<!-- <div>
+{{title}}
+</div> -->
 
+<app-navbar></app-navbar>
+
+<app-sidenav></app-sidenav>
+<!-- 
 <div id="mySidenav" class="sidenav">
-  <a href="#">About</a>
-  <a href="#">Services</a>
-  <a href="#">Clients</a>
-  <a href="#">Contact</a>
-</div>
+    <a href="#">About</a>
+    <a href="#">Services</a>
+    <a href="#">Clients</a>
+    <a href="#">Contact</a>
+</div> -->
+
+<!-- <div id="myRightScreen" class="overlay">
+    <button class="btn button-no-borders" (click)="closeClicked()">
+        <span class="fa fa-chevron-left"></span>
+    </button>
+    <div class="overlay-content">
+        <h1>page 2</h1>
+    </div>
+</div> -->
+
+<app-rightscreen (notify)='onNotifyRightWindow($event)'></app-rightscreen>
 
 <div id="main" class="main-content-panel">
-  <div class="row">
-    <div class="col-sm-1">
-      <button (click)="showHideSideClicked()">
-        <span class="fa fa-chevron-left"> </span>
-      </button>
+    <div class="row">
+        <div class="col-sm-1">
+            <button (click)="showHideSideClicked()">
+                <span id="show-hide-side-button" class="fa "> </span>
+            </button>
+        </div>
+        <div class="col-sm-11">
+            <div class="row-content-header">{{title}}</div>
+        </div>
     </div>
-    <div class="col-sm-11">
-      <div class="row-content-header">{{ title }}</div>
+    <div class="main-content">
+        <button class="btn btn-primary" (click)="buttonClickedDetail()">
+            detail
+        </button>
     </div>
-  </div>
-  <div class="main-content">
-    <button class="btn btn-primary">
-      detail
-    </button>
-  </div>
 </div>
-
 
